--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,12 @@
 body {
-    width: 250px;
+  height: 30px;
+  width: 30px;
+  outline: none;
+  margin: 10px;
+  border: none;
+  border-radius: 2px;
+}
+
+button {
+    
 }
