--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,7 @@
 body {
+  align-content: center;
   height: 30px;
-  width: 30px;
+  width: 263px;
   outline: none;
   margin: 10px;
   border: none;
@@ -8,5 +9,22 @@ body {
 }
 
 button {
-    
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #8f8f8f;
+}
+
+.active{
+  color: #8f8f8f;
 }
